--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -7,6 +7,7 @@ include ../clients-common-info/clients-common-info
 include ../individual-info/individual-info
 include ../ts-list/ts-list
 include ../search-bar-add/search-bar-add
+include ../qr-codes/qr-codes
 
 mixin clients-popup()
   +popup('Сбербанк')#clients-popup
@@ -17,11 +18,11 @@ mixin clients-popup()
             +vertical-menu-item
               +vertical-menu-text Общая информация
             +vertical-menu-item
-              +vertical-menu-text._active Физ. лица
+              +vertical-menu-text Физ. лица
             +vertical-menu-item
               +vertical-menu-text Список ТС
             +vertical-menu-item
-              +vertical-menu-text QR-коды
+              +vertical-menu-text._active QR-коды
             +vertical-menu-item
               +vertical-menu-text MiFare карты
             +vertical-menu-item
@@ -35,10 +36,11 @@ mixin clients-popup()
         //- Общая информация
         //+clients-common-info
         //- Физ. лица
-        +individual-info
+        //+individual-info
         //- Список ТС
         //+search-bar-add('Добавить', 'Введите название партнёра, название или адрес объекта')
         //+ts-list._transparent
         //- QR-коды
+        +qr-codes
         //- MiFare карты
         //- Доступ в ЛК
