--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -21,8 +21,8 @@ mixin clients-popup()
               +vertical-menu-text Физ. лица
             +vertical-menu-item
               +vertical-menu-text Список ТС
-            +vertical-menu-item
-              +vertical-menu-text._active QR-коды
+            +vertical-menu-item._active
+              +vertical-menu-text QR-коды
             +vertical-menu-item
               +vertical-menu-text MiFare карты
             +vertical-menu-item
