--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -44,3 +44,6 @@ mixin clients-popup()
         +qr-codes
         //- MiFare карты
         //- Доступ в ЛК
+
+  //- qr-codes dependencies
+  +qr-codes-templates
