--- a/app/components/individual-info/individual-info.pug
+++ b/app/components/individual-info/individual-info.pug
@@ -1,9 +1,9 @@
-include ../../blocks/accordion/accordion
 include ../../blocks/button/button
 include ../../blocks/icon-button/icon-button
 include ../../blocks/input/input
 include ../../blocks/tabs/tabs
 include ../../blocks/field/field
+include ../accordion/accordion
 include ../ts-list/ts-list
 include ../search-bar-add/search-bar-add
 
