--- a/app/components/accordion/accordion.scss
+++ b/app/components/accordion/accordion.scss
@@ -4,7 +4,7 @@
   &__button {
     display: flex;
     align-items: center;
-    padding: 0 16px;
+    padding-left: 16px;
     height: 48px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     background-color: #fff;
@@ -36,11 +36,19 @@
 
   &__heading {
     margin-left: 16px;
+    padding-right: 16px;
     color: #0353a4;
     font-size: 14px;
     font-weight: 500;
     will-change: color;
     transition: color .25s ease-in-out;
+  }
+
+  &__select {
+    background-color: #f6f6f6;
+    height: 32px;
+    margin-left: auto;
+    margin-right: 7px;
   }
 
   &__item {
