--- a/app/components/qr-form/qr-form.pug
+++ b/app/components/qr-form/qr-form.pug
@@ -6,46 +6,50 @@ include ../../blocks/textarea/textarea
 
 mixin qr-form()
   +b.FORM.qr-form&attributes(attributes)
-    +e.group
-      +field
-        +field-label._align_right.qr-form__label Название штрихкода:
-        +field-item.qr-form__field
-          +input
-    +e.group
-      +field
-        +field-label._align_right.qr-form__label ТП для гостя:
-        +field-item.qr-form__field
-          +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
-      +field
-        +field-label._align_right.qr-form__label ТС для гостя:
-        +field-item.qr-form__field
-          +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
-    +e.group
-      +field
-        +field-label._align_right.qr-form__label ТП для арендатора:
-        +field-item.qr-form__field
-          +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
-      +field
-        +field-label._align_right.qr-form__label ТС для арендатора:
-        +field-item.qr-form__field
-          +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
-    +e.group
-      +field
-        +field-label._align_right.qr-form__label ТП на арендованные места:
-        +field-item.qr-form__field
-          +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
-      +field
-        +field-label._align_right.qr-form__label ТС на арендованные места:
-        +field-item.qr-form__field
-          +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
-    +e.group
-      +field
-        +field-label._align_right.qr-form__label Сумма скидки:
-        +field-item.qr-form__field
-          +input.qr-form__small-field
-          +checkbox('name', 'value')._with_label.qr-form__small-field.qr-form__checkbox Любая сумма
-    +e.group
-      +field
-        +field-label._align_right.qr-form__label Описание:
-        +field-item.qr-form__field
-          +textarea
+    if block
+      +e.buttons
+        block
+    +e.content
+      +e.group
+        +field
+          +field-label._align_right.qr-form__label Название штрихкода:
+          +field-item.qr-form__field
+            +input
+      +e.group
+        +field
+          +field-label._align_right.qr-form__label ТП для гостя:
+          +field-item.qr-form__field
+            +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
+        +field
+          +field-label._align_right.qr-form__label ТС для гостя:
+          +field-item.qr-form__field
+            +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
+      +e.group
+        +field
+          +field-label._align_right.qr-form__label ТП для арендатора:
+          +field-item.qr-form__field
+            +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
+        +field
+          +field-label._align_right.qr-form__label ТС для арендатора:
+          +field-item.qr-form__field
+            +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
+      +e.group
+        +field
+          +field-label._align_right.qr-form__label ТП на арендованные места:
+          +field-item.qr-form__field
+            +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
+        +field
+          +field-label._align_right.qr-form__label ТС на арендованные места:
+          +field-item.qr-form__field
+            +select([{title: 'Все города', value: 1}, {title: 'Option', value: 2}])
+      +e.group
+        +field
+          +field-label._align_right.qr-form__label Сумма скидки:
+          +field-item.qr-form__field
+            +input.qr-form__small-field
+            +checkbox('name', 'value')._with_label.qr-form__small-field.qr-form__checkbox Любая сумма
+      +e.group
+        +field
+          +field-label._align_right.qr-form__label Описание:
+          +field-item.qr-form__field
+            +textarea
