--- a/app/components/qr-form/qr-form.scss
+++ b/app/components/qr-form/qr-form.scss
@@ -1,5 +1,17 @@
 .qr-form {
   display: block;
+  background-color: #f6f6f6;
+  padding-bottom: 20px;
+
+  &__buttons {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  &__content {
+    margin-top: 20px;
+    padding-left: 17px;
+  }
 
   &__label {
     width: 146px;
