--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -8,6 +8,7 @@ include ../individual-info/individual-info
 include ../ts-list/ts-list
 include ../search-bar-add/search-bar-add
 include ../qr-codes/qr-codes
+include ../mifare-cards/mifare-cards
 
 mixin clients-popup()
   +popup('Сбербанк')#clients-popup
@@ -21,9 +22,9 @@ mixin clients-popup()
               +vertical-menu-text Физ. лица
             +vertical-menu-item
               +vertical-menu-text Список ТС
-            +vertical-menu-item._active
-              +vertical-menu-text QR-коды
             +vertical-menu-item
+              +vertical-menu-text QR-коды
+            +vertical-menu-item._active
               +vertical-menu-text MiFare карты
             +vertical-menu-item
               +vertical-menu-text Доступ в ЛК
@@ -41,8 +42,9 @@ mixin clients-popup()
         //+search-bar-add('Добавить', 'Введите название партнёра, название или адрес объекта')
         //+ts-list._transparent
         //- QR-коды
-        +qr-codes
+        //+qr-codes
         //- MiFare карты
+        +mifare-cards
         //- Доступ в ЛК
 
   //- qr-codes dependencies
