--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -15,6 +15,10 @@
       padding: 12px 13px 12px 0;
     }
 
+    &_with_border {
+      border-bottom: 1px solid #d9d9d9;
+    }
+
     &:not(:first-child) {
       border-top: 1px solid #d9d9d9;
     }
