fix clients popup

--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -20,14 +20,19 @@ mixin clients-popup()
               +vertical-menu-text Общая информация
             +vertical-menu-item
               +vertical-menu-text Физ. лица
+              +vertical-menu-text 27
             +vertical-menu-item
               +vertical-menu-text Список ТС
+              +vertical-menu-text 5
             +vertical-menu-item
               +vertical-menu-text QR-коды
+              +vertical-menu-text 15
             +vertical-menu-item._active
               +vertical-menu-text MiFare карты
+              +vertical-menu-text 25
             +vertical-menu-item
               +vertical-menu-text Доступ в ЛК
+              +vertical-menu-text Есть
         +inner-sidebar-item
           +add-tags(getData('add-tags'))
         +inner-sidebar-item.clients-popup__sidebar-btn
