--- a/app/components/mifare-popup/mifare-popup.pug
+++ b/app/components/mifare-popup/mifare-popup.pug
@@ -1,25 +1,32 @@
 include ../../blocks/popup/popup
 include ../../blocks/inner-sidebar/inner-sidebar
 include ../../blocks/vertical-menu/vertical-menu
+include ../../blocks/alert/alert
 include ../mifare-card-info/mifare-card-info
+include ../mifare-card-sessions/mifare-card-sessions
 
 mixin mifare-popup()
   +popup('5234 4256 9012 | Петров Василий Анатольевич')#mifare-popup
     +b.mifare-popup
-      +inner-sidebar.__sidebar
-        +inner-sidebar-item._menu
-          +vertical-menu
-            +vertical-menu-item._active
-              +vertical-menu-text Информация
-            +vertical-menu-item
-              +vertical-menu-text Сессии
-            +vertical-menu-item
-              +vertical-menu-text Транзакции
-        +inner-sidebar-item._with_border
-          a(href='#').mifare-popup__remove-card Отвязать карту
+      +alert._danger.__alert Внимание! Карта заблокирована.
+      +e.container
+        +inner-sidebar.__sidebar
+          +inner-sidebar-item._menu
+            +vertical-menu
+              +vertical-menu-item
+                +vertical-menu-text Информация
+              +vertical-menu-item._active
+                +vertical-menu-text Сессии
+              +vertical-menu-item
+                +vertical-menu-text Транзакции
+          +inner-sidebar-item._with_border
+            a(href='#').mifare-popup__remove-card Отвязать карту
+          +inner-sidebar-item.mifare-popup__sidebar-btn
+            +icon-button('icon-lock')(href='#')._uppercase._shadow.mifare-popup__unlock-button Разблокировать
 
-      +e.content
-        //- Информация
-        +mifare-card-info
-        //- Сессии
-        //- Транзакции
+        +e.content
+          //- Информация
+          //- +mifare-card-info
+          //- Сессии
+          +mifare-card-sessions
+          //- Транзакции
