--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -54,6 +54,19 @@ mixin search-filter()
               +select([{ title: 'Любой', value: 1 }, { title: 'Любой 1', value: 2 }])._size_small
 
         +e.footer
-          +button(href='#')._text_grey._uppercase.__reset Сбросить
-          +button(href='#')._grey._uppercase.__button Сохранить фильтр
-          +button(href='#')._green._uppercase.__button Применить
+          +e.block._default
+            +e.controls
+              +e.col._flexible
+                +button(href='#')._text_grey._uppercase.__reset Сбросить
+              +e.col
+                +button(href='#')._grey._uppercase.js-search-filter-action-save Сохранить фильтр
+              +e.col
+                +button(href='#')._green._uppercase Применить
+          +e.block._saving
+            +e.controls
+              +e.col._flexible
+                +input
+              +e.col
+                +button(href='#')._green._uppercase Готово
+              +e.col
+                +button(href='#')._text_grey._uppercase.__reset.js-search-filter-action-abort Отмена
