--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -88,6 +88,10 @@
       background-color: #fffaf0 !important;
     }
 
+    &_left_padding {
+      padding-left: 32px;
+    }
+
     &_main {
       min-height: 48px;
       align-items: center;
