--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -159,8 +159,7 @@ block layout-right
               +table-text 28.04.2017
               +table-text._size_small 10:44:00
           +table-col._width_260
-      //- TODO ВТФ???
-      //-+table-row._parent
+      +table-row._parent
         +table-row._main
           +table-col._flexible
             +checkbox('row', 'value').__checkbox
@@ -290,7 +289,7 @@ block layout-right
                 +table-col._width_200
                 +table-col._width_260
           +table-row._parent
-            +table-row._main
+            +table-row._main._left_padding
               +table-col._flexible
                 +checkbox('row', 'value').__checkbox
                 +table-text
@@ -314,7 +313,7 @@ block layout-right
                   +table-text._size_small 12:14:32
               +table-col._width_260
             +table-row._children
-              +table-row._main
+              +table-row._main._left_padding
                 +table-col._flexible
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
@@ -327,7 +326,7 @@ block layout-right
                 +table-col._width_100._align_center
                 +table-col._width_200
                 +table-col._width_260
-              +table-row._main
+              +table-row._main._left_padding
                 +table-col._flexible
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
