--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -210,7 +210,7 @@ block layout-right
                   +table-text._size_small 12:14:32
               +table-col._width_260
             +table-row._children
-              +table-row._main
+              +table-row._main._left_padding
                 +table-col._flexible
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
@@ -223,7 +223,7 @@ block layout-right
                 +table-col._width_100._align_center
                 +table-col._width_200
                 +table-col._width_260
-              +table-row._main
+              +table-row._main._left_padding
                 +table-col._flexible
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
@@ -262,7 +262,7 @@ block layout-right
                   +table-text._size_small 12:14:32
               +table-col._width_260
             +table-row._children
-              +table-row._main
+              +table-row._main._left_padding
                 +table-col._flexible
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
@@ -275,7 +275,7 @@ block layout-right
                 +table-col._width_100._align_center
                 +table-col._width_200
                 +table-col._width_260
-              +table-row._main
+              +table-row._main._left_padding
                 +table-col._flexible
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
