--- a/app/blocks/default-table/default-table.scss
+++ b/app/blocks/default-table/default-table.scss
@@ -14,6 +14,10 @@
     font-weight: 400;
     padding: 10px 0;
 
+    &_border_bottom {
+      border-bottom: 1px solid #d2d3d3;
+    }
+
     &_align_right {
       text-align: right;
     }
