--- a/app/components/actions-header/actions-header.scss
+++ b/app/components/actions-header/actions-header.scss
@@ -18,11 +18,24 @@
       margin-left: auto;
     }
 
+    &_align_center {
+      align-items: center;
+    }
+
     &:not(:last-child) { margin-right: 15px; }
   }
 
   &__search-bar {
     width: 100%;
     height: 100%;
+  }
+
+  &__link {
+    color: #235789;
+    font-size: 14px;
+    font-weight: 400;
+    transition: color .25s ease-in-out;
+
+    &:hover { color: #f9ad1a; }
   }
 }
