--- a/app/components/add-to-blacklist/add-to-blacklist.pug
+++ b/app/components/add-to-blacklist/add-to-blacklist.pug
@@ -2,6 +2,7 @@ include ../../blocks/popup/popup
 include ../../blocks/button/button
 include ../../blocks/default-table/default-table
 include ../../blocks/input/input
+include ../../blocks/icon-button/icon-button
 include ../actions-header/actions-header
 
 mixin add-to-blacklist()
