--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -13,7 +13,7 @@ mixin header(activeMenuItem)
       +tabs.__tabs
         +tabs-tab("/", "Клиенты")(class=clientsPage)
         +tabs-tab("/sessions.html", "Сессии")(class=sessionsPage)
-        +tabs-tab("#", "Чёрный список")(class=blackListPage)
+        +tabs-tab("/blacklist.html", "Чёрный список")(class=blackListPage)
 
     +e.col
       +search-bar('ПОИСК').__col-block.__search-bar
