--- a/app/blocks/inner-sidebar/inner-sidebar.pug
+++ b/app/blocks/inner-sidebar/inner-sidebar.pug
@@ -5,3 +5,7 @@ mixin inner-sidebar()
 mixin inner-sidebar-item()
   +e.item&attributes(attributes)
     block
+
+mixin inner-sidebar-heading()
+  +e.heading&attributes(attributes)
+    block
