--- a/app/pages/test/test.pug
+++ b/app/pages/test/test.pug
@@ -22,7 +22,7 @@ block layout-left
   +sidebar
 
 block layout-right
-  +header
+  +header(getData('header-menu'))
   +b.test.page
     +actions-header
       +actions-header-col
