--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -13,6 +13,10 @@
     justify-content: center;
   }
 
+  &_shadow {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .1), inset 0 2px 0 #fff;
+  }
+
   &_size_small {
     min-height: 32px;
     padding: 0 22px;
