--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -23,4 +23,12 @@
       border-top: 1px solid #d9d9d9;
     }
   }
+
+  &__heading {
+    color: #202325;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 8px;
+    margin-left: -5px;
+  }
 }
