--- a/app/pages/statistics/statistics.pug
+++ b/app/pages/statistics/statistics.pug
@@ -19,7 +19,7 @@ block layout-left
 block layout-right
   +header([{path: '#', title: 'Таблицы', active: true}, {path: '#', title: 'Графики'}])
 
-  +b.statistics.page
+  +b.statistics
     +inner-sidebar
       +inner-sidebar-item
         +inner-sidebar-heading Стандартные отчёты
