--- a/app/pages/settings-devices-zone/settings-devices-zone.scss
+++ b/app/pages/settings-devices-zone/settings-devices-zone.scss
@@ -1,3 +1,32 @@
 .settings-devices-zone {
   display: block;
+
+  &__add {
+    width: 210px;
+    justify-content: center;
+  }
+
+  &__container {
+    display: flex;
+    width: 100%;
+    min-height: 100%;
+  }
+
+  &__content {
+    flex: 1;
+    padding-bottom: 15px;
+  }
+
+  &__form {
+    margin-top: 66px;
+    padding-left: 24px;
+  }
+
+  &__label {
+    width: 267px;
+  }
+
+  &__field {
+    width: 437px;
+  }
 }
