--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -24,14 +24,36 @@
     }
   }
 
+  &__header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+
+  &__badge {
+    display: flex;
+    align-items: center;
+    padding: 0 9px;
+    min-height: 23px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+    border-radius: 2px;
+    background-color: #f6f6f6;
+    margin-left: auto;
+    color: #202325;
+    font-size: 12px;
+    font-weight: 700;
+  }
+
   &__heading {
     display: block;
+    width: 100%;
     color: #202325;
     font-size: 16px;
     font-weight: 500;
     margin-bottom: 8px;
     margin-left: -5px;
     transition: color .25s ease-in-out;
+    padding-right: 8px;
 
     &:hover, &_active { color: #f9ad1a; }
   }
