--- a/app/pages/settings-devices-device/settings-devices-device.scss
+++ b/app/pages/settings-devices-device/settings-devices-device.scss
@@ -1,4 +1,4 @@
-.settings-devices-zone {
+.settings-devices-device {
   display: block;
   height: 100%;
 
@@ -19,7 +19,7 @@
   }
 
   &__form {
-    margin-top: 66px;
+    margin-top: 14px;
     padding-left: 24px;
     padding-right: 24px;
   }
