--- a/app/blocks/popup/popup.pug
+++ b/app/blocks/popup/popup.pug
@@ -1,20 +1,29 @@
 include ../icon/icons
 
 //- использование
-//- +popup('Заголовок')#test
-//-   .content
+//- +popup#test
+//-   +popup-header('заголовок')
+//-     .content
+//-   +popup-body
+//-     .content
 //- content, нужно помещять в отдельный компонент..
 
 //- показать/скрыть попап - $('#myPopup').trigger('popup:show') или 'popup:hide'
 //- или по клику на кнопку +button(href='#' data-target-popup='#test').js-show-popup
 
-mixin popup(heading)
+mixin popup()
   +b.popup&attributes(attributes)
     +e.wrapper
       +e.content
-        +e.header
-          +e.H2.heading!= heading
-          +e.close
-            +icon('icon-close').close-icon
-        +e.body
-          block
+        block
+
+mixin popup-header(heading)
+  +e.header&attributes(attributes)
+    +e.H2.heading!= heading
+    block
+    +e.close
+      +icon('icon-close').close-icon
+
+mixin popup-body()
+  +e.body&attributes(attributes)
+    block
